--- a/angular-tour-of-heroes/package.json
+++ b/angular-tour-of-heroes/package.json
@@ -23,6 +23,7 @@
     "@angular/platform-browser-dynamic": "^4.2.5",
     "@angular/platform-server": "^4.2.5",
     "@angular/router": "^4.2.5",
+    "angular-in-memory-web-api": "^0.3.2",
     "core-js": "^2.4.1",
     "rxjs": "^5.1.0",
     "zone.js": "^0.8.4"
